# compound_interest_calculator

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
templates/: index.html  result.html
tests/: __init__.py  api_test.py  app_test.py
